2018-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLock.m: Using class_createInstance() to allocate locks
	seems to be causing memory issues and crashes somehow.  Temporarily
	comment out that code to try to get things working again.

2018-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m:
	* Source/NSArray.m:
	* Source/NSCharacterSet.m:
	* Source/NSString.m:
	Use pthread mutex directly to try to avoid initialising NSLock too
	early on during process startup.

2018-04-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Don't set the name of trhe global lock until
	after we have make sure that strings and autorlrease are set up.

2018-04-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m:
	* Source/GSHTTPAuthentication.m:
	* Source/GSHTTPURLHandle.m:
	* Source/GSMDNSNetServices.m:
	* Source/GSURLPrivate.h:
	* Source/NSCalendar.m:
	* Source/NSCharacterSet.m:
	* Source/NSConnection.m:
	* Source/NSCountedSet.m:
	* Source/NSIndexPath.m:
	* Source/NSKeyValueObserving.m:
	* Source/NSLocale.m:
	* Source/NSMessagePort.m:
	* Source/NSSocketPort.m:
	* Source/NSUserDefaults.m:
	* Source/NSValueTransformer.m:
	Replace the obsolete GSLazyLock code with standard NSLocks now that
	almost all significant software is multithreaded.

2018-04-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: When adding a new thread, set the thread specific
	memory to point to the object before doing anything else which might
	attempt to access the thread (causing recursive registration).

2018-04-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/unicode/cop.h: Add comment/fixme
	* Source/Additions/Unicode.m:
	* Source/NSString.m:
	Move uni_isnonsp() to NSString.m and make it use nonBaseCharacterSet
	so that it correctly copes with both surrogate pairs and traditional
	composed character sequences.  NB. David points out that this is not