@@ -1,3 +1,9 @@
+2018-04-15  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSException.m: Improve -symbold method on platforms without
+	backtrace support (list addresses with a message to say the symbols
+	are not available).
+
 2018-04-12  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSLock.m: Using class_createInstance() to allocate locks
